--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<p class="lead text-center text-md-left text-white"> With the rapid development of the Internet around the world, especially with the advent of the mobile Internet era, cloud computing has become a public service anytime and anywhere, and the network quality and security of these services have become the decisive factor to ensure the continuous operation of cloud computing. The X-aegis protection system is introduced by American Shield security to solve the slow access speed and severe security problems of enterprise Web systems in the Internet era.At present, X-aegis has deployed dozens of large cloud computing centers around the world, reserve hundreds of G defense bandwidth, X-aegis one-stop security acceleration solution, with "zero deployment", "zero maintenance", "cloud defense" mode, for customers to prevent including XSS, SQL injection, Trojan, 0day attack, DDoS botnet, DNS attack and a series of security threats against Web system. Past, present and future, X-aegis will continue to improve the quality of service and provide first-class service to its customers. </p>
 						<!-- Buttons -->
 						<div class="text-center text-md-left mt-5">
-							<a href="mailto:chaelmi312@gmail.com" class="btn btn-primary btn-icon">
+							<a href="mailto:contact@xaegis.co" class="btn btn-primary btn-icon">
 								<span class="btn-inner--text">Contact Us</span><span class="btn-inner--icon">
 									<i data-feather="arrow-right"></i>
 								</span>
